{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "607671b0-22fa-4d43-925d-009b781fd4ed",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "52fabf09-302c-41e0-bd86-d5cfdbd2b1af",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchContact",
                    "type": "Button",
                    "id": "87bb3177-2a17-4b8f-80fd-91a664d3f03e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "0cb86b0e-b6fe-468f-808d-82e7a0c4c3cb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchTap",
                    "type": "Button",
                    "id": "d4f48e52-e671-4e4d-b282-b805e3309129",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5fa94fb8-c4f7-4d29-a18c-8448c0960f13",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1ff18b0-fb05-4fed-bbb3-befa9cbc7988",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a80762a4-03d9-4440-9994-d9d87e6148c4",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0501055-99de-4781-8d84-93367b485a79",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}